# Pathtracer

./: .gitignore  CMakeLists.txt  README.md  Wroteup.docx  ~$roteup.docx
CGL/: CMakeLists.txt
CGL/include/CGL/: CGL.h  spectrum.h  vector3D.h
CGL/src/: matrix3x3.cpp
docs/: index.html
docs/images/part2/: time.docx
docs/images/part3/: comparison.docx
src/application/: application.cpp  application.h  main.cpp  renderer.h
src/pathtracer/: bsdf.cpp  bsdf.h  camera.cpp  camera.h  intersection.h  pathtracer.cpp  pathtracer.h  raytraced_renderer.cpp  raytraced_renderer.h  sampler.cpp  sampler.h
src/scene/: bbox.cpp  bbox.h  bvh.cpp  bvh.h  environment_light.cpp  environment_light.h  light.cpp  light.h  object.cpp  object.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/scene/collada/: collada.cpp
src/scene/gl_scene/: ambient_light.h  area_light.h  directional_light.h  environment_light.h  mesh.cpp  mesh.h  point_light.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot_light.h
src/util/: image.h  random_util.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/Assignment3.xcodeproj/: project.pbxproj
xcode/Assignment3.xcodeproj/project.xcworkspace/xcuserdata/Emma.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Assignment3.xcodeproj/xcshareddata/xcschemes/: pathtracer.xcscheme
xcode/Assignment3.xcodeproj/xcuserdata/Emma.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/Assignment3.xcodeproj/xcuserdata/Emma.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  xcschememanagement.plist
xcode/CGL/: cmake_install.cmake
xcode/CGL/CGL.xcodeproj/: project.pbxproj
xcode/CGL/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  install_postBuildPhase.makeRelease
